<resources>
    <string name="app_name">Laboratorio3</string>
    <string name="_25_00">25:00</string>
    <string name="tiempo_de_descaso">Tiempo de descaso:</string>
    <string name="_05_00">05:00</string>
    <string name="ciclo_pomodoro_1_de_4">Ciclo pomodoro 1 de 4</string>
<<<<<<< HEAD
    <string name="edicion">Edicion</string>
    <string name="intervalo_de_trabajo">Intervalo de trabajo (minutos)</string>
    <string name="intervalo_de_descanso">Intervalo de descanso(minutos)</string>
    <string name="cantidad_de_ciclos_pomodoros">cantidad de ciclos pomodoros</string>
    <string name="confirmar">Confirmar</string>
=======
    <string name="help">Help</string>
    <string name="ayuda_de_pomodoro">Ayuda de Pomodoro</string>
    <string name="volver">Volver</string>
    <string name="online_pomodoro_timer_tomatotimers_is_a_customizable_and_easy_to_use_looping_pomodoro_timer_to_boost_your_efficiency_about_pomodoro_technique_pomodoro_technique_is_a_time_management_method_developed_by_francesco_cirillo_in_the_late_1980s_this_technique_use_timer_to_break_down_works_into_a_set_of_intervals_separated_by_breaks_pomodoro_technique_increases_productivity_by_taking_short_scheduled_breaks_regularly_how_to_use_pomodoro_tomato_timers_decide_task_to_be_done_set_timers_to_25_minutes_for_one_pomodoro_work_on_task_until_timer_is_complete_after_timer_completion_put_a_checkmark_on_to_do_list_take_a_5_minutes_short_break_after_four_pomodoro_take_a_long_break_repeat_to_step_1_use_the_loop_button_to_do_step_1_until_step_5_in_a_row_pomodoro_and_pomodoro_technique_are_registered_trademarks_of_francesco_cirillo_this_web_app_is_not_affiliated_with_francesco_cirillo_online_pomodoro_timer_tomatotimers_is_a_customizable_and_easy_to_use_looping_pomodoro_timer_to_boost_your_efficiency_about_pomodoro_technique_pomodoro_technique_is_a_time_management_method_developed_by_francesco_cirillo_in_the_late_1980s_this_technique_use_timer_to_break_down_works_into_a_set_of_intervals_separated_by_breaks_pomodoro_technique_increases_productivity_by_taking_short_scheduled_breaks_regularly_how_to_use_pomodoro_tomato_timers_decide_task_to_be_done_set_timers_to_25_minutes_for_one_pomodoro_work_on_task_until_timer_is_complete_after_timer_completion_put_a_checkmark_on_to_do_list_take_a_5_minutes_short_break_after_four_pomodoro_take_a_long_break_repeat_to_step_1_use_the_loop_button_to_do_step_1_until_step_5_in_a_row_pomodoro_and_pomodoro_technique_are_registered_trademarks_of_francesco_cirillo_this_web_app_is_not_affiliated_with_francesco_cirillo_online_pomodoro_timer_tomatotimers_is_a_customizable_and_easy_to_use_looping_pomodoro_timer_to_boost_your_efficiency_about_pomodoro_technique_pomodoro_technique_is_a_time_management_method_developed_by_francesco_cirillo_in_the_late_1980s_this_technique_use_timer_to_break_down_works_into_a_set_of_intervals_separated_by_breaks_pomodoro_technique_increases_productivity_by_taking_short_scheduled_breaks_regularly_how_to_use_pomodoro_tomato_timers_decide_task_to_be_done_set_timers_to_25_minutes_for_one_pomodoro_work_on_task_until_timer_is_complete_after_timer_completion_put_a_checkmark_on_to_do_list_take_a_5_minutes_short_break_after_four_pomodoro_take_a_long_break_repeat_to_step_1_use_the_loop_button_to_do_step_1_until_step_5_in_a_row_pomodoro_and_pomodoro_technique_are_registered_trademarks_of_francesco_cirillo_this_web_app_is_not_affiliated_with_francesco_cirillo">Online Pomodoro Timer TomatoTimers is a customizable and easy to use looping pomodoro timer to boost your efficiency. About Pomodoro Technique Pomodoro™ Technique is a time management method developed by Francesco Cirillo in the late 1980s. This technique use timer to break down works into a set of intervals separated by breaks. Pomodoro technique increases productivity by taking short scheduled breaks regularly. How to use Pomodoro/ Tomato timers Decide task to be done set timers to 25 minutes for one PomodoroWork on task until timer is complete After timer completion, put a checkmark on to-do list Take a 5 minutes short break After four Pomodorotake a long break Repeat to step 1 USE THE LOOP BUTTON TO DO STEP 1 UNTIL STEP 5 IN A ROW Pomodoro™ and Pomodoro Technique® are registered trademarks of Francesco Cirillo. This web app is not affiliated with Francesco Cirillo.Online Pomodoro Timer TomatoTimers is a customizable and easy to use looping pomodoro timer to boost your efficiency. About Pomodoro Technique Pomodoro™ Technique is a time management method developed by Francesco Cirillo in the late 1980s. This technique use timer to break down works into a set of intervals separated by breaks. Pomodoro technique increases productivity by taking short scheduled breaks regularly. How to use Pomodoro/ Tomato timers Decide task to be done set timers to 25 minutes for one PomodoroWork on task until timer is complete After timer completion, put a checkmark on to-do list Take a 5 minutes short break After four Pomodorotake a long break Repeat to step 1 USE THE LOOP BUTTON TO DO STEP 1 UNTIL STEP 5 IN A ROW Pomodoro™ and Pomodoro Technique® are registered trademarks of Francesco Cirillo. This web app is not affiliated with Francesco Cirillo.Online Pomodoro Timer TomatoTimers is a customizable and easy to use looping pomodoro timer to boost your efficiency. About Pomodoro Technique Pomodoro™ Technique is a time management method developed by Francesco Cirillo in the late 1980s. This technique use timer to break down works into a set of intervals separated by breaks. Pomodoro technique increases productivity by taking short scheduled breaks regularly. How to use Pomodoro/ Tomato timers Decide task to be done set timers to 25 minutes for one PomodoroWork on task until timer is complete After timer completion, put a checkmark on to-do list Take a 5 minutes short break After four Pomodorotake a long break Repeat to step 1 USE THE LOOP BUTTON TO DO STEP 1 UNTIL STEP 5 IN A ROW Pomodoro™ and Pomodoro Technique® are registered trademarks of Francesco Cirillo. This web app is not affiliated with Francesco Cirillo.</string>
>>>>>>> f2792b733a2f37a33b9cde4fc0ecbcb78fb7812e
</resources>